2009-02-23  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py (setupUdev):
	Use start-stop-daemon for udev startup,
	The default timeout is 180, no need to give it as a parameter,
	Call "udevadm monitor" for logging into /dev/.udev.log,
	Call /usr/bin/udevsync after rw remounting of the root filesystem
	for copying the log file and the persistent network/cdrom rules
	from /dev into /var/log and /etc (#8458, #8520).

2009-02-21  Fatih Aşıcı <fatih@pardus.org.tr>
	* bin/mudur.py (startServices): Increase timeout for waiting X
	socket to be ready and do not wait if xorg=off is passed on kernel
	command line.

2009-02-02  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py (stopSystem): Use lambda function for sort helper.

2009-02-02  Bahadır Kandemir <bahadir@pardus.org.tr>
	* bin/mudur.py: Handle logger.sync() exceptions (Fixes #7410).

2009-01-25  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py: Drop legacy kernel check for udev initialization.

2009-01-14  Furkan Duman <coderlord@gmail.com>
    * bin/network.py: Unicode fix for Turkish characters in connection name.

2009-01-08  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py: Use lat0-16 instead of lat9-16 for Swedish font (#8940).

2009-01-06  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py (startServices): Start sysklogd after startNetwork and
	remove redundant sysklogd as it's manually started.

2008-12-26  Onur Küçük <onur@pardus.org.tr>
	* bin/mudur.py (cleanupTmp) : Add kde4 directories.

2008-12-26  Ozan Çağlayan <ozan@pardus.org.tr>
	* po/es.po : Updated Spanish translation.
	* bin/mudur.py : Encapsulate mudur with a main() function.
	* bin/mudur.py : Replace old_handler stuff with Python's
	default SIGINT signal handler.

2008-12-24  Ozan Çağlayan <ozan@pardus.org.tr>
	* bin/mudur.py (modules): Remove module dependency calculation
	as it's handled by kernel's pakhandler.

2008-12-11  Bahadır Kandemir <bahadir@pardus.org.tr>
	* bin/mudur.py (cleanupVar): Ignore errors during the cleanup of